--- a/Backend-springboot/app/pom.xml
+++ b/Backend-springboot/app/pom.xml
@@ -97,6 +97,20 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.4</version>
+    	</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		 <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <scope>runtime</scope>
+    </dependency>
 
  </dependencies>
 
