local network access is given

--- a/Backend-springboot/app/src/main/resources/application.properties
+++ b/Backend-springboot/app/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.academicchimes.app.models
+
+cors.allowedOrigins = http://localhost:5173, http://192.168.81.215:5173 ,http://192.168.56.1:5173
+
+server.address=0.0.0.0
